--- a/arch/test.ipynb
+++ b/arch/test.ipynb
@@ -493,6 +493,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "need to train and then evaluate a linear classifier to evaluate these embeddings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
