--- a/image_retrieval_and_severity_order.ipynb
+++ b/image_retrieval_and_severity_order.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from med_sclr import *\n",
-    "from med_sclr.supcon import *\n",
+    "from md_clr import *\n",
+    "from md_clr.supcon import *\n",
     "\n",
     "import seaborn as sns"
    ]
