renaming to src

--- a/image_retrieval_and_severity_order.ipynb
+++ b/image_retrieval_and_severity_order.ipynb
@@ -2,22 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from md_clr import *\n",
-    "from md_clr.supcon import *\n",
+    "from src import *\n",
+    "from src.supcon import *\n",
     "\n",
     "import seaborn as sns\n",
     "import timm\n",
